# MCP_RAG

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  FIXES_README.md  GUI_ADVANCED_README.md  GUI_README.md  README.md  RECOMENDACIONES_MEJORAS.md  SCRIPTS_README.md  STORAGE_PROGRESS_README.md  bulk_ingest.py  bulk_ingest_gui.py  check_model_load.py  check_system.bat  choose_gui.py  diagnose.bat  diagnose_venv.bat  fix_dependencies.bat  fix_dependencies_simple.bat  fix_mcp.bat  force_clean_venv.bat  install_requirements.bat  interactive_test.py  pre_download_model.py  proyecto_alpha.txt  pyproject.toml  rag_core.py  rag_server.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirements2.txt  run_gui.bat  run_gui.py  run_gui_advanced.bat  run_gui_selector.bat  run_server.bat  server.py  show_mcp_tools_status.py  start.bat  (+17 more)
bulk_ingest_GUI/: README.md  __init__.py  debug_rag_core.py  launch.py  main.py  rag_core_wrapper.py  run_gui.py  start_app.py  test_imports.py  test_rag_core.py  test_server_integration.py  test_wrapper.py
bulk_ingest_GUI/controllers/: __init__.py  main_controller.py
bulk_ingest_GUI/gui_utils/: __init__.py  constants.py
bulk_ingest_GUI/models/: __init__.py  document_model.py  metadata_model.py
bulk_ingest_GUI/services/: __init__.py  configuration_service.py  document_service.py
bulk_ingest_GUI/utils/: constants.py  exceptions.py
bulk_ingest_GUI/views/: __init__.py  main_view.py
bulk_ingest_GUI/widgets/: __init__.py  document_preview_widget.py  statistics_widget.py
docs/: 图形高级界面.md  存储进度条.md  脚本.md
mcp_server_organized/: interactive_test.py  main.py  pyproject.toml  run_server_organized.bat  server.py  test_clean_imports.py  test_final_validation.py  test_mcp_server_validation.py  test_quick_fix.py  validate_config_integration.py
mcp_server_organized/src/: rag_core.py  rag_server_bk.py
mcp_server_organized/src/models/: document_model.py  metadata_model.py
mcp_server_organized/src/services/: __init__.py
mcp_server_organized/src/tools/: __init__.py  document_tools.py  search_tools.py  utility_tools.py
mcp_server_organized/src/utils/: config.py  logger.py
mcp_server_organized/tests/: README.md  run_all_tests.py  test_document_tools.py  test_search_tools.py  test_utility_tools.py
mcp_server_organized_cloud/: .env.example  pyproject.toml  server.py  test_clean_imports.py  test_quick_fix.py
mcp_server_organized_cloud/src/: rag_core.py  rag_core_openai.py
mcp_server_organized_cloud/src/services/: chroma_store.py  cloud_openai.py
mcp_server_organized_cloud/src/tools/: __init__.py  document_tools.py  search_tools.py  utility_tools.py
mcp_server_organized_cloud/tests/: test_search_tools.py
scripts/: start.bat
scripts/system/: fix_dependencies.bat  force_clean_venv.bat  pre_download_model.py
src/: rag_core_openai.py  rag_server_bk.py
src/mcp_rag/: cli.py  web.py
src/tools/: __init__.py  document_tools.py  search_tools.py
tests/: README.md  __init__.py  run_all_tests.py  test_document_tools.py  test_utility_tools.py
