[project]
name = "mcp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "alabaster>=1.0.0",
    "altgraph>=0.17.4",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.10.0",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=21.2.0",
    "arrow>=1.3.0",
    "asgiref>=3.9.1",
    "asttokens>=3.0.0",
    "async-lru>=2.0.5",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "authlib>=1.6.1",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-core>=1.35.0",
    "azure-identity>=1.24.0",
    "babel>=2.17.0",
    "backoff>=2.2.1",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "bleach>=6.2.0",
    "build>=1.3.0",
    "cachetools>=5.5.2",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.3",
    "chroma-hnswlib>=0.7.6",
    "chromadb>=1.0.16",
    "click>=8.2.1",
    "cobble>=0.1.4",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "comm>=0.2.3",
    "contourpy>=1.3.3",
    "coverage>=7.10.3",
    "cryptography>=45.0.6",
    "cycler>=0.12.1",
    "dataclasses-json>=0.6.7",
    "debugpy>=1.8.16",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "deprecated>=1.2.18",
    "distro>=1.9.0",
    "docutils>=0.21.2",
    "durationpy>=0.10",
    "effdet>=0.4.1",
    "emoji>=2.14.1",
    "et-xmlfile>=2.0.0",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.0",
    "fastapi>=0.116.1",
    "fastjsonschema>=2.21.1",
    "fastmcp>=2.11.3",
    "filelock>=3.18.0",
    "filetype>=1.2.0",
    "flake8>=7.3.0",
    "flatbuffers>=25.2.10",
    "fonttools>=4.59.0",
    "fqdn>=1.5.1",
    "frozenlist>=1.7.0",
    "fsspec>=2025.7.0",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "google-cloud-vision>=3.10.2",
    "googleapis-common-protos>=1.70.0",
    "greenlet>=3.2.4",
    "grpcio>=1.74.0",
    "grpcio-status>=1.74.0",
    "h11>=0.16.0",
    "html5lib>=1.1",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "huggingface-hub>=0.34.4",
    "humanfriendly>=10.0",
    "idna>=3.10",
    "imagesize>=1.4.1",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "iniconfig>=2.1.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "isodate>=0.7.2",
    "isoduration>=20.11.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.10.0",
    "joblib>=1.5.1",
    "json5>=0.12.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.25.0",
    "jsonschema-specifications>=2025.4.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.8.1",
    "jupyter-events>=0.12.0",
    "jupyter-lsp>=2.2.6",
    "jupyter-server>=2.16.0",
    "jupyter-server-terminals>=0.5.3",
    "jupyterlab>=4.4.5",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.27.3",
    "jupyterlab-widgets>=3.0.15",
    "kiwisolver>=1.4.9",
    "kubernetes>=33.1.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-text-splitters>=0.3.9",
    "langdetect>=1.0.9",
    "langsmith>=0.4.13",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "mammoth>=1.10.0",
    "markdown>=3.8.2",
    "markdown-it-py>=4.0.0",
    "markdownify>=1.2.0",
    "markitdown>=0.1.2",
    "markupsafe>=3.0.2",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.5",
    "matplotlib-inline>=0.1.7",
    "mccabe>=0.7.0",
    "mcp>=1.12.4",
    "mdurl>=0.1.2",
    "mistune>=3.1.3",
    "mmh3>=5.2.0",
    "mpmath>=1.3.0",
    "msal>=1.33.0",
    "msal-extensions>=1.3.1",
    "multidict>=6.6.4",
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "notebook-shim>=0.2.4",
    "numpy>=2.3.2",
    "oauthlib>=3.3.1",
    "olefile>=0.47",
    "omegaconf>=2.3.0",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "openai>=1.99.9",
    "openapi-pydantic>=0.5.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp-proto-common>=1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-instrumentation>=0.57b0",
    "opentelemetry-instrumentation-asgi>=0.57b0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-proto>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-semantic-conventions>=0.57b0",
    "opentelemetry-util-http>=0.57b0",
    "orjson>=3.11.1",
    "overrides>=7.7.0",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pandocfilters>=1.5.1",
    "parso>=0.8.4",
    "pathspec>=0.12.1",
    "pathvalidate>=3.3.1",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pefile>=2023.2.7",
    "pi-heif>=1.1.0",
    "pikepdf>=9.10.2",
    "pillow>=11.3.0",
    "platformdirs>=4.3.8",
    "pluggy>=1.6.0",
    "posthog>=5.4.0",
    "prometheus-client>=0.22.1",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.3.2",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "pulsar-client>=3.8.0",
    "pure-eval>=0.2.3",
    "puremagic>=1.30",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pybase64>=1.4.2",
    "pycocotools>=2.0.10",
    "pycodestyle>=2.14.0",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pyflakes>=3.4.0",
    "pygments>=2.19.2",
    "pyinstaller>=6.15.0",
    "pyinstaller-hooks-contrib>=2025.8",
    "pyjwt>=2.10.1",
    "pypandoc>=1.15",
    "pyparsing>=3.2.3",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.0",
    "pypika>=0.48.9",
    "pyproject-hooks>=1.2.0",
    "pyreadline3>=3.5.4",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-iso639>=2025.2.18",
    "python-json-logger>=3.3.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "python-multipart>=0.0.20",
    "python-oxmsg>=0.0.2",
    "python-pptx>=1.0.2",
    "pytz>=2025.2",
    "pywin32>=311",
    "pywin32-ctypes>=0.2.3",
    "pywinpty>=2.0.15",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.1",
    "rapidfuzz>=3.13.0",
    "referencing>=0.36.2",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "rfc3339-validator>=0.1.4",
    "rfc3986-validator>=0.1.1",
    "rich>=14.1.0",
    "rpds-py>=0.27.0",
    "rsa>=4.9.1",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "send2trash>=1.8.3",
    "sentence-transformers>=5.1.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "snowballstemmer>=3.0.1",
    "soupsieve>=2.7",
    "speechrecognition>=3.14.3",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jquery>=4.1",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "stack-data>=0.6.3",
    "starlette>=0.47.2",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
    "terminado>=0.18.1",
    "threadpoolctl>=3.6.0",
    "timm>=1.0.19",
    "tinycss2>=1.4.0",
    "tokenizers>=0.21.4",
    "tomli>=2.2.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.55.0",
    "typer>=0.16.0",
    "types-python-dateutil>=2.9.0.20250809",
    "typing-extensions>=4.14.1",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "unstructured-client>=0.42.2",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
    "unstructured[csv,docx,html,img,pdf,pptx,txt,xlsx]==0.17.2",
    "uri-template>=1.3.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
    "wcwidth>=0.2.13",
    "webcolors>=24.11.1",
    "webencodings>=0.5.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "widgetsnbextension>=4.0.14",
    "win32-setctime>=1.2.0",
    "wrapt>=1.17.3",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    "yarl>=1.20.1",
    "youtube-transcript-api>=1.2.2",
    "zipp>=3.23.0",
    "zstandard>=0.23.0",
]
