[project]
name = "mcp-server-organized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.30",
    "markitdown>=0.1.2",
    "mcp>=1.12.4",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.11",
]
